--- a/astro_demo/package.json
+++ b/astro_demo/package.json
@@ -17,8 +17,13 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.7.3",
+    "canvas-confetti": "^1.6.0",
+    "pnpm": "^8.6.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "svelte": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.6.0"
   }
 }
