add astro image support

--- a/astro_demo/tsconfig.json
+++ b/astro_demo/tsconfig.json
@@ -16,6 +16,7 @@
         "src/layouts/*"
       ]
     },
+    "types": ["@astrojs/image/client"],
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   }
